plugins {
    id 'com.android.library'
}
apply plugin: 'kotlin-android'
apply plugin: 'com.diffplug.spotless'

android {
    compileSdkVersion rootProject.ext.compileSdkVersion
    buildToolsVersion rootProject.ext.buildToolsVersion
	namespace = "org.jetbrains.kotlin"
	
    defaultConfig {
        minSdk rootProject.ext.minSdkVersion
        targetSdk rootProject.ext.targetSdkVersion
    }

    buildTypes {
        release {
            minifyEnabled false
        }
    }
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_17 
        targetCompatibility JavaVersion.VERSION_17
    }
    kotlinOptions {
        jvmTarget = '17'
    }
}

dependencies {
    implementation 'com.github.marschall:zipfilesystem-standalone:1.0.1'
    implementation 'androidx.annotation:annotation:1.8.2'
    implementation project(path: ':jaxp:jaxp-internal')
    implementation project(path: ':jaxp:xml')

    runtimeOnly ('org.jetbrains.kotlin:kotlin-reflect:2.2.21')

    api 'org.jetbrains.trove4j:trove4j:20160824'
   // api files('libs/kotlin-compiler-embeddable-1.7.20-RC.jar')
    api files('libs/kotlin-compiler-2.0.0.jar')
	//api 'org.jetbrains.kotlin:kotlin-compiler-embeddable:2.0.0'
	api files('libs/javax.jar')
    compileOnly files('libs/the-unsafe.jar')
    compileOnly project(path: ':android-stubs')
    implementation project(':javac')
   
    compileOnly 'org.jetbrains:annotations:26.0.2-1'
    api("org.lsposed.hiddenapibypass:hiddenapibypass:6.1")
    api("org.codehaus.woodstox:stax2-api:4.2.2")
    api("org.jetbrains.intellij.deps:trove4j:1.0.20200330")
    api("org.jdom:jdom:2.0.2")

}

repositories {
    mavenCentral()
}

spotless {
		java {
			target "**/*.java"
			googleJavaFormat()
			}
}

tasks.withType(JavaCompile).configureEach {
    options.compilerArgs += [
        "--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED",
        "--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED",
        "--add-exports=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED",
        "--add-exports=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED",
        "--add-exports=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED",
        "--add-exports=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED",
        "--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED",
        "--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED",
        "--add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED",
        "--add-exports=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED",
        "--add-exports=jdk.compiler/sun.nio.ch=ALL-UNNAMED"
    ]
}